--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-dash
-numpy
-pandas
-geopandas
-dash_bootstrap_components
-statsmodels
-pmdarima
+dash==2.0.0
+numpy==1.21.2
+pandas==1.3.4
+geopandas==0.10.2
+dash-bootstrap-components==1.0.0
+statsmodels==0.13.0
+pmdarima==1.8.4
